add groups for windows pipeline

--- a/concourse/pipelines/windows-image-build.yaml
+++ b/concourse/pipelines/windows-image-build.yaml
@@ -6080,3 +6080,291 @@ jobs:
       image_name: "sql-2019-web-windows-2019-dc"
       release_notes: ""
       topic: "projects/artifact-releaser-prod/topics/gcp-guest-image-release-prod"
+
+groups:
+- name: windows-2004
+  jobs:
+  - build-windows-2004-core
+  - publish-to-prod-2004
+  - publish-to-staging-2004
+  - publish-to-testing-2004
+- name: windows-2012r2
+  jobs:
+  - build-windows-2012r2
+  - build-windows-2012r2-core
+  - publish-to-testing-2012r2
+  - publish-to-testing-2012r2-core
+  - publish-to-staging-2012r2
+  - publish-to-staging-2012r2-core
+  - publish-to-prod-2012r2
+  - publish-to-prod-2012r2-core
+  - build-sql-2012-enterprise-windows-2012-r2-dc
+  - build-sql-2012-standard-windows-2012-r2-dc
+  - build-sql-2012-web-windows-2012-r2-dc
+  - build-sql-2014-enterprise-windows-2012-r2-dc
+  - build-sql-2014-standard-windows-2012-r2-dc
+  - build-sql-2014-web-windows-2012-r2-dc
+  - build-sql-2016-enterprise-windows-2012-r2-dc
+  - build-sql-2016-standard-windows-2012-r2-dc
+  - build-sql-2016-web-windows-2012-r2-dc
+  - build-sql-2017-express-windows-2012-r2-dc
+  - publish-to-prod-sql-2012-enterprise-windows-2012-r2-dc
+  - publish-to-prod-sql-2012-standard-windows-2012-r2-dc
+  - publish-to-prod-sql-2012-web-windows-2012-r2-dc
+  - publish-to-prod-sql-2014-enterprise-windows-2012-r2-dc
+  - publish-to-prod-sql-2014-standard-windows-2012-r2-dc
+  - publish-to-prod-sql-2014-web-windows-2012-r2-dc
+  - publish-to-prod-sql-2016-enterprise-windows-2012-r2-dc
+  - publish-to-prod-sql-2016-standard-windows-2012-r2-dc
+  - publish-to-prod-sql-2016-web-windows-2012-r2-dc
+  - publish-to-prod-sql-2017-express-windows-2012-r2-dc
+  - publish-to-staging-sql-2012-enterprise-windows-2012-r2-dc
+  - publish-to-staging-sql-2012-standard-windows-2012-r2-dc
+  - publish-to-staging-sql-2012-web-windows-2012-r2-dc
+  - publish-to-staging-sql-2014-enterprise-windows-2012-r2-dc
+  - publish-to-staging-sql-2014-standard-windows-2012-r2-dc
+  - publish-to-staging-sql-2014-web-windows-2012-r2-dc
+  - publish-to-staging-sql-2016-enterprise-windows-2012-r2-dc
+  - publish-to-staging-sql-2016-standard-windows-2012-r2-dc
+  - publish-to-staging-sql-2016-web-windows-2012-r2-dc
+  - publish-to-staging-sql-2017-express-windows-2012-r2-dc
+  - publish-to-testing-sql-2012-enterprise-windows-2012-r2-dc
+  - publish-to-testing-sql-2012-standard-windows-2012-r2-dc
+  - publish-to-testing-sql-2012-web-windows-2012-r2-dc
+  - publish-to-testing-sql-2014-enterprise-windows-2012-r2-dc
+  - publish-to-testing-sql-2014-standard-windows-2012-r2-dc
+  - publish-to-testing-sql-2014-web-windows-2012-r2-dc
+  - publish-to-testing-sql-2016-enterprise-windows-2012-r2-dc
+  - publish-to-testing-sql-2016-standard-windows-2012-r2-dc
+  - publish-to-testing-sql-2016-web-windows-2012-r2-dc
+  - publish-to-testing-sql-2017-express-windows-2012-r2-dc
+- name: windows-2016
+  jobs:
+  - build-windows-2016
+  - build-windows-2016-core
+  - publish-to-testing-2016
+  - publish-to-testing-2016-core
+  - publish-to-staging-2016
+  - publish-to-staging-2016-core
+  - publish-to-prod-2016
+  - publish-to-prod-2016-core
+  - build-sql-2014-enterprise-windows-2016-dc
+  - build-sql-2016-enterprise-windows-2016-dc
+  - build-sql-2016-standard-windows-2016-dc
+  - build-sql-2016-web-windows-2016-dc
+  - build-sql-2017-enterprise-windows-2016-dc
+  - build-sql-2017-express-windows-2016-dc
+  - build-sql-2017-standard-windows-2016-dc
+  - build-sql-2017-web-windows-2016-dc
+  - publish-to-testing-sql-2014-enterprise-windows-2016-dc
+  - publish-to-testing-sql-2016-enterprise-windows-2016-dc
+  - publish-to-testing-sql-2016-standard-windows-2016-dc
+  - publish-to-testing-sql-2016-web-windows-2016-dc
+  - publish-to-testing-sql-2017-enterprise-windows-2016-dc
+  - publish-to-testing-sql-2017-express-windows-2016-dc
+  - publish-to-testing-sql-2017-standard-windows-2016-dc
+  - publish-to-testing-sql-2017-web-windows-2016-dc
+  - publish-to-staging-sql-2014-enterprise-windows-2016-dc
+  - publish-to-staging-sql-2016-enterprise-windows-2016-dc
+  - publish-to-staging-sql-2016-standard-windows-2016-dc
+  - publish-to-staging-sql-2016-web-windows-2016-dc
+  - publish-to-staging-sql-2017-enterprise-windows-2016-dc
+  - publish-to-staging-sql-2017-express-windows-2016-dc
+  - publish-to-staging-sql-2017-standard-windows-2016-dc
+  - publish-to-staging-sql-2017-web-windows-2016-dc
+  - publish-to-prod-sql-2014-enterprise-windows-2016-dc
+  - publish-to-prod-sql-2016-enterprise-windows-2016-dc
+  - publish-to-prod-sql-2016-standard-windows-2016-dc
+  - publish-to-prod-sql-2016-web-windows-2016-dc
+  - publish-to-prod-sql-2017-enterprise-windows-2016-dc
+  - publish-to-prod-sql-2017-express-windows-2016-dc
+  - publish-to-prod-sql-2017-standard-windows-2016-dc
+  - publish-to-prod-sql-2017-web-windows-2016-dc
+- name: windows-2019
+  jobs:
+  - build-windows-2019
+  - build-windows-2019-core
+  - publish-to-testing-2019
+  - publish-to-testing-2019-core
+  - publish-to-staging-2019
+  - publish-to-staging-2019-core
+  - publish-to-prod-2019
+  - publish-to-prod-2019-core
+  - build-sql-2016-enterprise-windows-2019-dc
+  - build-sql-2016-standard-windows-2019-dc
+  - build-sql-2016-web-windows-2019-dc
+  - build-sql-2017-enterprise-windows-2019-dc
+  - build-sql-2017-express-windows-2019-dc
+  - build-sql-2017-standard-windows-2019-dc
+  - build-sql-2017-web-windows-2019-dc
+  - build-sql-2019-enterprise-windows-2019-dc
+  - build-sql-2019-standard-windows-2019-dc
+  - build-sql-2019-web-windows-2019-dc
+  - publish-to-testing-sql-2016-enterprise-windows-2019-dc
+  - publish-to-testing-sql-2016-standard-windows-2019-dc
+  - publish-to-testing-sql-2016-web-windows-2019-dc
+  - publish-to-testing-sql-2017-enterprise-windows-2019-dc
+  - publish-to-testing-sql-2017-express-windows-2019-dc
+  - publish-to-testing-sql-2017-standard-windows-2019-dc
+  - publish-to-testing-sql-2017-web-windows-2019-dc
+  - publish-to-testing-sql-2019-enterprise-windows-2019-dc
+  - publish-to-testing-sql-2019-standard-windows-2019-dc
+  - publish-to-testing-sql-2019-web-windows-2019-dc
+  - publish-to-staging-sql-2016-enterprise-windows-2019-dc
+  - publish-to-staging-sql-2016-standard-windows-2019-dc
+  - publish-to-staging-sql-2016-web-windows-2019-dc
+  - publish-to-staging-sql-2017-enterprise-windows-2019-dc
+  - publish-to-staging-sql-2017-express-windows-2019-dc
+  - publish-to-staging-sql-2017-standard-windows-2019-dc
+  - publish-to-staging-sql-2017-web-windows-2019-dc
+  - publish-to-staging-sql-2019-enterprise-windows-2019-dc
+  - publish-to-staging-sql-2019-standard-windows-2019-dc
+  - publish-to-staging-sql-2019-web-windows-2019-dc
+  - publish-to-prod-sql-2016-enterprise-windows-2019-dc
+  - publish-to-prod-sql-2016-standard-windows-2019-dc
+  - publish-to-prod-sql-2016-web-windows-2019-dc
+  - publish-to-prod-sql-2017-enterprise-windows-2019-dc
+  - publish-to-prod-sql-2017-express-windows-2019-dc
+  - publish-to-prod-sql-2017-standard-windows-2019-dc
+  - publish-to-prod-sql-2017-web-windows-2019-dc
+  - publish-to-prod-sql-2019-enterprise-windows-2019-dc
+  - publish-to-prod-sql-2019-standard-windows-2019-dc
+  - publish-to-prod-sql-2019-web-windows-2019-dc
+- name: windows-2022
+  jobs:
+  - build-windows-2022
+  - build-windows-2022-core
+  - publish-to-testing-2022
+  - publish-to-testing-2022-core
+  - publish-to-staging-2022
+  - publish-to-staging-2022-core
+  - publish-to-prod-2022
+  - publish-to-prod-2022-core
+- name: windows-20h2
+  jobs:
+  - build-windows-20h2-core
+  - publish-to-testing-20h2
+  - publish-to-staging-20h2
+  - publish-to-prod-20h2
+- name: sql-2012
+  jobs:
+  - build-sql-2012-enterprise-windows-2012-r2-dc
+  - build-sql-2012-standard-windows-2012-r2-dc
+  - build-sql-2012-web-windows-2012-r2-dc
+  - publish-to-testing-sql-2012-enterprise-windows-2012-r2-dc
+  - publish-to-testing-sql-2012-standard-windows-2012-r2-dc
+  - publish-to-testing-sql-2012-web-windows-2012-r2-dc
+  - publish-to-staging-sql-2012-enterprise-windows-2012-r2-dc
+  - publish-to-staging-sql-2012-standard-windows-2012-r2-dc
+  - publish-to-staging-sql-2012-web-windows-2012-r2-dc
+  - publish-to-prod-sql-2012-enterprise-windows-2012-r2-dc
+  - publish-to-prod-sql-2012-standard-windows-2012-r2-dc
+  - publish-to-prod-sql-2012-web-windows-2012-r2-dc
+- name: sql-2014
+  jobs:
+  - build-sql-2014-enterprise-windows-2012-r2-dc
+  - build-sql-2014-enterprise-windows-2016-dc
+  - build-sql-2014-standard-windows-2012-r2-dc
+  - build-sql-2014-web-windows-2012-r2-dc
+  - publish-to-testing-sql-2014-enterprise-windows-2012-r2-dc
+  - publish-to-testing-sql-2014-enterprise-windows-2016-dc
+  - publish-to-testing-sql-2014-standard-windows-2012-r2-dc
+  - publish-to-testing-sql-2014-web-windows-2012-r2-dc
+  - publish-to-staging-sql-2014-enterprise-windows-2012-r2-dc
+  - publish-to-staging-sql-2014-enterprise-windows-2016-dc
+  - publish-to-staging-sql-2014-standard-windows-2012-r2-dc
+  - publish-to-staging-sql-2014-web-windows-2012-r2-dc
+  - publish-to-prod-sql-2014-enterprise-windows-2012-r2-dc
+  - publish-to-prod-sql-2014-enterprise-windows-2016-dc
+  - publish-to-prod-sql-2014-standard-windows-2012-r2-dc
+  - publish-to-prod-sql-2014-web-windows-2012-r2-dc
+- name: sql-2016
+  jobs:
+  - build-sql-2016-enterprise-windows-2012-r2-dc
+  - build-sql-2016-enterprise-windows-2016-dc
+  - build-sql-2016-enterprise-windows-2019-dc
+  - build-sql-2016-standard-windows-2012-r2-dc
+  - build-sql-2016-standard-windows-2016-dc
+  - build-sql-2016-standard-windows-2019-dc
+  - build-sql-2016-web-windows-2012-r2-dc
+  - build-sql-2016-web-windows-2016-dc
+  - build-sql-2016-web-windows-2019-dc
+  - publish-to-testing-sql-2016-enterprise-windows-2012-r2-dc
+  - publish-to-testing-sql-2016-enterprise-windows-2016-dc
+  - publish-to-testing-sql-2016-enterprise-windows-2019-dc
+  - publish-to-testing-sql-2016-standard-windows-2012-r2-dc
+  - publish-to-testing-sql-2016-standard-windows-2016-dc
+  - publish-to-testing-sql-2016-standard-windows-2019-dc
+  - publish-to-testing-sql-2016-web-windows-2012-r2-dc
+  - publish-to-testing-sql-2016-web-windows-2016-dc
+  - publish-to-testing-sql-2016-web-windows-2019-dc
+  - publish-to-staging-sql-2016-enterprise-windows-2012-r2-dc
+  - publish-to-staging-sql-2016-enterprise-windows-2016-dc
+  - publish-to-staging-sql-2016-enterprise-windows-2019-dc
+  - publish-to-staging-sql-2016-standard-windows-2012-r2-dc
+  - publish-to-staging-sql-2016-standard-windows-2016-dc
+  - publish-to-staging-sql-2016-standard-windows-2019-dc
+  - publish-to-staging-sql-2016-web-windows-2012-r2-dc
+  - publish-to-staging-sql-2016-web-windows-2016-dc
+  - publish-to-staging-sql-2016-web-windows-2019-dc
+  - publish-to-prod-sql-2016-enterprise-windows-2012-r2-dc
+  - publish-to-prod-sql-2016-enterprise-windows-2016-dc
+  - publish-to-prod-sql-2016-enterprise-windows-2019-dc
+  - publish-to-prod-sql-2016-standard-windows-2012-r2-dc
+  - publish-to-prod-sql-2016-standard-windows-2016-dc
+  - publish-to-prod-sql-2016-standard-windows-2019-dc
+  - publish-to-prod-sql-2016-web-windows-2012-r2-dc
+  - publish-to-prod-sql-2016-web-windows-2016-dc
+  - publish-to-prod-sql-2016-web-windows-2019-dc
+- name: sql-2017
+  jobs:
+  - build-sql-2017-enterprise-windows-2016-dc
+  - build-sql-2017-enterprise-windows-2019-dc
+  - build-sql-2017-express-windows-2012-r2-dc
+  - build-sql-2017-express-windows-2016-dc
+  - build-sql-2017-express-windows-2019-dc
+  - build-sql-2017-standard-windows-2016-dc
+  - build-sql-2017-standard-windows-2019-dc
+  - build-sql-2017-web-windows-2016-dc
+  - build-sql-2017-web-windows-2019-dc
+  - publish-to-prod-sql-2017-enterprise-windows-2016-dc
+  - publish-to-prod-sql-2017-enterprise-windows-2019-dc
+  - publish-to-prod-sql-2017-express-windows-2012-r2-dc
+  - publish-to-prod-sql-2017-express-windows-2016-dc
+  - publish-to-prod-sql-2017-express-windows-2019-dc
+  - publish-to-prod-sql-2017-standard-windows-2016-dc
+  - publish-to-prod-sql-2017-standard-windows-2019-dc
+  - publish-to-prod-sql-2017-web-windows-2016-dc
+  - publish-to-prod-sql-2017-web-windows-2019-dc
+  - publish-to-staging-sql-2017-enterprise-windows-2016-dc
+  - publish-to-staging-sql-2017-enterprise-windows-2019-dc
+  - publish-to-staging-sql-2017-express-windows-2012-r2-dc
+  - publish-to-staging-sql-2017-express-windows-2016-dc
+  - publish-to-staging-sql-2017-express-windows-2019-dc
+  - publish-to-staging-sql-2017-standard-windows-2016-dc
+  - publish-to-staging-sql-2017-standard-windows-2019-dc
+  - publish-to-staging-sql-2017-web-windows-2016-dc
+  - publish-to-staging-sql-2017-web-windows-2019-dc
+  - publish-to-testing-sql-2017-enterprise-windows-2016-dc
+  - publish-to-testing-sql-2017-enterprise-windows-2019-dc
+  - publish-to-testing-sql-2017-express-windows-2012-r2-dc
+  - publish-to-testing-sql-2017-express-windows-2016-dc
+  - publish-to-testing-sql-2017-express-windows-2019-dc
+  - publish-to-testing-sql-2017-standard-windows-2016-dc
+  - publish-to-testing-sql-2017-standard-windows-2019-dc
+  - publish-to-testing-sql-2017-web-windows-2016-dc
+  - publish-to-testing-sql-2017-web-windows-2019-dc
+- name: sql-2019
+  jobs:
+  - build-sql-2019-enterprise-windows-2019-dc
+  - build-sql-2019-standard-windows-2019-dc
+  - build-sql-2019-web-windows-2019-dc
+  - publish-to-prod-sql-2019-enterprise-windows-2019-dc
+  - publish-to-prod-sql-2019-standard-windows-2019-dc
+  - publish-to-prod-sql-2019-web-windows-2019-dc
+  - publish-to-staging-sql-2019-enterprise-windows-2019-dc
+  - publish-to-staging-sql-2019-standard-windows-2019-dc
+  - publish-to-staging-sql-2019-web-windows-2019-dc
+  - publish-to-testing-sql-2019-enterprise-windows-2019-dc
+  - publish-to-testing-sql-2019-standard-windows-2019-dc
+  - publish-to-testing-sql-2019-web-windows-2019-dc
