Add container build/publish pipeline and task (#316)
* Add container build/publish pipeline and task

* Correct the passed step names

* Remove unused input from task

* Update naming and references as suggested in PR

* Update the naming and fix PR validation error

* mergerprep

* Update triggered resources
Add skip_download: "true"

* Update the container build workflow

* fix yaml white space and naming

Co-authored-by: Lawrence Hwang <lawrencehwang@google.com>

--- a/concourse/pipelines/windows-image-build.yaml
+++ b/concourse/pipelines/windows-image-build.yaml
@@ -353,6 +353,21 @@ resources:
     json_key: |
       ((gcs-key.credential))
     regexp: "sqlserver-uefi/sql-2019-web-windows-2019-dc-v([0-9]+).tar.gz"
+- name: windows-2019-core-for-containers-gcs
+  type: gcs
+  source:
+    bucket: artifact-releaser-prod-rtp
+    json_key: |
+      ((gcs-key.credential))
+    regexp: "windows_uefi/windows-2019-core-for-containers-v([0-9]+).tar.gz"
+- name: windows-2019-for-containers-gcs
+  type: gcs
+  source:
+    bucket: artifact-releaser-prod-rtp
+    json_key: |
+      ((gcs-key.credential))
+    regexp: "windows_uefi/windows-2019-for-containers-v([0-9]+).tar.gz"
+
 
 jobs:
 # Build jobs
@@ -2554,6 +2569,68 @@ jobs:
       source_image_project: "bct-prod-images"
       ssms_exe: ((.:windows-gcs-ssms-exe))
       timeout: "4h"
+# Windows windows 2019 core for containers
+- name: build-windows-2019-core-for-containers
+  plan:
+  - get: windows-2019-core-gcs
+    passed: [publish-to-testing-2019-core]
+    trigger: true
+    params:
+      skip_download: "true"
+  - get: compute-image-tools
+  - get: guest-test-infra
+  - task: get-credential
+    file: guest-test-infra/concourse/tasks/get-credential.yaml
+  - task: generate-build-id
+    file: guest-test-infra/concourse/tasks/generate-build-ids-windows.yaml
+    vars:
+      prefix: "windows-2019-core-for-containers"
+  - put: windows-2019-core-for-containers-gcs
+    params:
+      file: build-id-dir/windows-2019-core-for-containers-v*
+  - load_var: gcs-url
+    file: windows-2019-core-for-containers-gcs/url
+  - task: generate-build-date
+    file: guest-test-infra/concourse/tasks/generate-version.yaml
+  - load_var: build-date
+    file: publish-version/version
+  - task: daisy-build-windows-2019-core-for-containers
+    file: guest-test-infra/concourse/tasks/daisy-build-images-windows-container.yaml
+    vars:
+      wf: "windows_container/windows-2019-core-for-containers-uefi.wf.json"
+      gcs_url: ((.:gcs-url))
+      build_date: ((.:build-date))
+# Windows windows 2019 for containers
+- name: build-windows-2019-for-containers
+  plan:
+  - get: windows-2019-gcs
+    passed: [publish-to-testing-2019]
+    trigger: true
+    params:
+      skip_download: "true"
+  - get: compute-image-tools
+  - get: guest-test-infra
+  - task: get-credential
+    file: guest-test-infra/concourse/tasks/get-credential.yaml
+  - task: generate-build-id
+    file: guest-test-infra/concourse/tasks/generate-build-ids-windows.yaml
+    vars:
+      prefix: "windows-2019-for-containers"
+  - put: windows-2019-for-containers-gcs
+    params:
+      file: build-id-dir/windows-2019-for-containers-v*
+  - load_var: gcs-url
+    file: windows-2019-for-containers-gcs/url
+  - task: generate-build-date
+    file: guest-test-infra/concourse/tasks/generate-version.yaml
+  - load_var: build-date
+    file: publish-version/version
+  - task: daisy-build-windows-2019-for-containers
+    file: guest-test-infra/concourse/tasks/daisy-build-images-windows-container.yaml
+    vars:
+      wf: "windows_container/windows-2019-for-containers-uefi.wf.json"
+      gcs_url: ((.:gcs-url))
+      build_date: ((.:build-date))
 
 # Publish to testing
 # Windows 2022
@@ -3704,6 +3781,58 @@ jobs:
       publish_version: ((.:publish-version))
       wf: "sqlserver/sql-2019-web-windows-2019-dc-uefi.publish"
       environment: "test"
+# Windows 2019 core for containers
+- name: publish-to-testing-2019-core-for-containers
+  plan:
+  - get: guest-test-infra
+  - get: compute-image-tools
+  - task: get-credential
+    file: guest-test-infra/concourse/tasks/get-credential.yaml
+  - get: windows-2019-core-for-containers-gcs
+    passed: [build-windows-2019-core-for-containers]
+    trigger: true
+    params:
+      skip_download: "true"
+  - load_var: source-version
+    file: windows-2019-core-for-containers-gcs/version
+  - task: generate-version
+    file: guest-test-infra/concourse/tasks/generate-version.yaml
+  - load_var: publish-version
+    file: publish-version/version # produced from generate-version task
+  - task: publish-2019-core-for-containers
+    file: guest-test-infra/concourse/tasks/daisy-publish-images.yaml
+    vars:
+      source_gcs_path: "gs://artifact-releaser-prod-rtp/windows_uefi"
+      source_version: v((.:source-version))
+      publish_version: ((.:publish-version))
+      wf: "windows_container/windows-2019-core-for-containers-uefi.publish.json"
+      environment: "test"
+# Windows 2019 for containers
+- name: publish-to-testing-2019-for-containers
+  plan:
+  - get: guest-test-infra
+  - get: compute-image-tools
+  - task: get-credential
+    file: guest-test-infra/concourse/tasks/get-credential.yaml
+  - get: windows-2019-for-containers-gcs
+    passed: [build-windows-2019-for-containers]
+    trigger: true
+    params:
+      skip_download: "true"
+  - load_var: source-version
+    file: windows-2019-for-containers-gcs/version
+  - task: generate-version
+    file: guest-test-infra/concourse/tasks/generate-version.yaml
+  - load_var: publish-version
+    file: publish-version/version # produced from generate-version task
+  - task: publish-2019-for-containers
+    file: guest-test-infra/concourse/tasks/daisy-publish-images.yaml
+    vars:
+      source_gcs_path: "gs://artifact-releaser-prod-rtp/windows_uefi"
+      source_version: v((.:source-version))
+      publish_version: ((.:publish-version))
+      wf: "windows_container/windows-2019-for-containers-uefi.publish.json"
+      environment: "test"
 
 # Publish to staging
 # Windows 2022
@@ -4853,6 +4982,58 @@ jobs:
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
       wf: "sqlserver/sql-2019-web-windows-2019-dc-uefi.publish"
+      environment: "staging"
+# Windows 2019 core for containers
+- name: publish-to-staging-2019-core-for-containers
+  plan:
+  - get: guest-test-infra
+  - get: compute-image-tools
+  - task: get-credential
+    file: guest-test-infra/concourse/tasks/get-credential.yaml
+  - get: windows-2019-core-for-containers-gcs
+    passed: [publish-to-testing-2019-core-for-containers]
+    trigger: false
+    params:
+      skip_download: "true"
+  - load_var: source-version
+    file: windows-2019-core-for-containers-gcs/version
+  - task: generate-version
+    file: guest-test-infra/concourse/tasks/generate-version.yaml
+  - load_var: publish-version
+    file: publish-version/version # produced from generate-version task
+  - task: publish-2019-core-for-containers
+    file: guest-test-infra/concourse/tasks/daisy-publish-images.yaml
+    vars:
+      source_gcs_path: "gs://artifact-releaser-prod-rtp/windows_uefi"
+      source_version: v((.:source-version))
+      publish_version: ((.:publish-version))
+      wf: "windows_container/windows-2019-core-for-containers-uefi.publish.json"
+      environment: "staging"
+# Windows 2019 for containers
+- name: publish-to-staging-2019-for-containers
+  plan:
+  - get: guest-test-infra
+  - get: compute-image-tools
+  - task: get-credential
+    file: guest-test-infra/concourse/tasks/get-credential.yaml
+  - get: windows-2019-for-containers-gcs
+    passed: [publish-to-testing-2019-for-containers]
+    trigger: false
+    params:
+      skip_download: "true"
+  - load_var: source-version
+    file: windows-2019-for-containers-gcs/version
+  - task: generate-version
+    file: guest-test-infra/concourse/tasks/generate-version.yaml
+  - load_var: publish-version
+    file: publish-version/version # produced from generate-version task
+  - task: publish-2019-for-containers
+    file: guest-test-infra/concourse/tasks/daisy-publish-images.yaml
+    vars:
+      source_gcs_path: "gs://artifact-releaser-prod-rtp/windows_uefi"
+      source_version: v((.:source-version))
+      publish_version: ((.:publish-version))
+      wf: "windows_container/windows-2019-for-containers-uefi.publish.json"
       environment: "staging"
 
 # Publish to prod
@@ -6080,6 +6261,62 @@ jobs:
       image_name: "sql-2019-web-windows-2019-dc"
       release_notes: ""
       topic: "projects/artifact-releaser-prod/topics/gcp-guest-image-release-prod"
+# Windows 2019 core for containers
+- name: publish-to-prod-windows-2019-core-for-containers
+  plan:
+  - get: guest-test-infra
+  - get: compute-image-tools
+  - get: windows-2019-core-for-containers-gcs
+    passed: [publish-to-staging-2019-core-for-containers]
+    trigger: false
+    params:
+      skip_download: "true"
+  - load_var: source-version
+    file: windows-2019-core-for-containers-gcs/version
+  - task: get-credential
+    file: guest-test-infra/concourse/tasks/get-credential.yaml
+  - task: generate-version
+    file: guest-test-infra/concourse/tasks/generate-version.yaml
+  - load_var: publish-version
+    file: publish-version/version # produced from generate-version task
+  - task: publish-2019-core-for-containers
+    file: guest-test-infra/concourse/tasks/gcloud-publish-image.yaml
+    vars:
+      gcs_image_path: "gs://artifact-releaser-prod-rtp/windows_uefi"
+      source_version: v((.:source-version))
+      publish_version: ((.:publish-version))
+      wf: "windows_container/windows-2019-core-for-containers-uefi.publish.json"
+      image_name: "2019-core-for-containers"
+      release_notes: ""
+      topic: "projects/artifact-releaser-prod/topics/gcp-guest-image-release-prod"
+# Windows 2019 for containers
+- name: publish-to-prod-windows-2019-for-containers
+  plan:
+  - get: guest-test-infra
+  - get: compute-image-tools
+  - get: windows-2019-for-containers-gcs
+    passed: [publish-to-staging-2019-for-containers]
+    trigger: false
+    params:
+      skip_download: "true"
+  - load_var: source-version
+    file: windows-2019-for-containers-gcs/version
+  - task: get-credential
+    file: guest-test-infra/concourse/tasks/get-credential.yaml
+  - task: generate-version
+    file: guest-test-infra/concourse/tasks/generate-version.yaml
+  - load_var: publish-version
+    file: publish-version/version # produced from generate-version task
+  - task: publish-2019-for-containers
+    file: guest-test-infra/concourse/tasks/gcloud-publish-image.yaml
+    vars:
+      gcs_image_path: "gs://artifact-releaser-prod-rtp/windows_uefi"
+      source_version: v((.:source-version))
+      publish_version: ((.:publish-version))
+      wf: "windows_container/windows-2019-for-containers-uefi.publish.json"
+      image_name: "2019-for-containers"
+      release_notes: ""
+      topic: "projects/artifact-releaser-prod/topics/gcp-guest-image-release-prod"
 
 groups:
 - name: windows-2004
@@ -6230,6 +6467,14 @@ groups:
   - publish-to-prod-sql-2019-enterprise-windows-2019-dc
   - publish-to-prod-sql-2019-standard-windows-2019-dc
   - publish-to-prod-sql-2019-web-windows-2019-dc
+  - build-windows-2019-core-for-containers
+  - build-windows-2019-for-containers
+  - publish-to-prod-windows-2019-core-for-containers
+  - publish-to-prod-windows-2019-for-containers
+  - publish-to-staging-2019-core-for-containers
+  - publish-to-staging-2019-for-containers
+  - publish-to-testing-2019-core-for-containers
+  - publish-to-testing-2019-for-containers
 - name: windows-2022
   jobs:
   - build-windows-2022
@@ -6368,3 +6613,13 @@ groups:
   - publish-to-testing-sql-2019-enterprise-windows-2019-dc
   - publish-to-testing-sql-2019-standard-windows-2019-dc
   - publish-to-testing-sql-2019-web-windows-2019-dc
+- name: container-2019
+  jobs:
+  - build-windows-2019-core-for-containers
+  - build-windows-2019-for-containers
+  - publish-to-prod-windows-2019-core-for-containers
+  - publish-to-prod-windows-2019-for-containers
+  - publish-to-staging-2019-core-for-containers
+  - publish-to-staging-2019-for-containers
+  - publish-to-testing-2019-core-for-containers
+  - publish-to-testing-2019-for-containers
