--- a/concourse/tasks/daisy-publish-images.yaml
+++ b/concourse/tasks/daisy-publish-images.yaml
@@ -12,6 +12,7 @@ inputs:
 
 params:
   GOOGLE_APPLICATION_CREDENTIALS: "credentials/credentials.json"
+  ROLLOUT_RATE: 60
 
 run:
   path: /gce_image_publish
@@ -19,6 +20,7 @@ run:
   - -source_gcs_path=((source_gcs_path))
   - -source_version=((source_version))
   - -publish_version=((publish_version))
+  - -rollout_rate = $ROLLOUT_RATE
   - -skip_confirmation
   - -replace
   - -no_root
